# ClawMesh

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: docker.yml
.othala/: OBJECTIVES.md  repo-mode.toml  verify-command
gateway/: Cargo.toml
gateway/src/: main.rs
p2p/: Cargo.toml
p2p/src/: auth.rs  channel.rs  crypto.rs  discovery.rs  events.rs  federation.rs  gossip.rs  lib.rs  matchmaking.rs  node.rs  relay.rs  room.rs  room_state.rs  signal.rs
schemas/: README.md
schemas/examples/: announce.invalid.json  announce.valid.json  schedule.valid.json
schemas/v0.1/: envelope.schema.json
schemas/v0.1/messages/: announce.schema.json  offer.schema.json  request_match.schema.json  schedule.schema.json
spec/: README.md  protocol-v0.1.md  social-v0.2.md
spec/examples/: announce.json  offer.json  request_match.json  schedule.json
validator/: README.md  package.json  tsconfig.json  validate.py
validator/examples/: README.md
validator/src/: cli.ts  index.ts
validator/test/: protocol-vectors.test.ts
