[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
clawmesh-p2p = { path = "../p2p" }
chrono = { version = "0.4", features = ["serde"] }
opentelemetry = "0.24"
opentelemetry-otlp = { version = "0.17", features = ["tonic", "trace"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.25"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
