[package]
name = "clawmesh-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
