[package]
name = "clawmesh-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
